spent a lot of time working on trying to fix dynamic textview css bug, was paritally successful. going to submit a bug report to gtk to try to get it fixed, but i can now give the textview its own class and have it be rendered correctly, with the downside that i have lost the dynamic sizing of the textview elements so the underline is too long when playing the timer. A compromise will have to be made at some point, maybe in this way, maybe by styling all textviews. still want to try tags as an alternative for styling that might not have the bug. also added preliminary sound manager page

--- a/data/style/style.css
+++ b/data/style/style.css
@@ -1,7 +1,7 @@
 stackswitcher.ptimer button label {
     font-family: lato;
 }
-textview {
+textview.ptimer-stage-time {
     font-family: lato;
     font-weight: 300;
     letter-spacing: 3px;
